--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -170,6 +170,16 @@ label.required::before {
     list-style: none;
 }
 
+.update-loading {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, .7);
+    z-index: 2;
+    text-align: center;
+    padding-top: 20px;
+}
+
 /* ============================= General rules ============================ */
 
 /* ============================= Header ============================ */
